fix(accessibility): label text too low contrast

--- a/web/src/components/ui/ui.css
+++ b/web/src/components/ui/ui.css
@@ -38,7 +38,7 @@
     border: 1px solid var(--near-black);
     outline: none;
     transition: all var(--transition-duration) linear;
-    background: var(--near-black);
+    background: var(--black);
     color: var(--white);
     width: 100%;
 
